[package]
name = "rust_lidar"
version = "0.1.0"
authors = ["Ariel Young <arielyoung103@gmail.com>", "Tiffany Chieu <tiffany9342@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
ctrlc = "3.1.7"
sdl2 = "0.34.3"